<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_query_hint">Search query</string>
    <string name="search_string">Search</string>
    <string name="title_activity_full_image">Full Image</string>
    <string name="action_filters">Filter</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="advanced_search_options">Advanced Filters</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save_button">Save</string>
    <string name="image_size_prompt">select image size</string>
    <string name="network_error">Oops... There seems some network problem. Please try again.</string>
    <string name="ok_button">OK</string>


    <string-array name="image_size">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
    </string-array>
    <string-array name="color_filter">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
