<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_options"
        android:id="@+id/tvAdvancedSearchOption"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvAdvancedSearchOption"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvColorFilter"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/tvImageType"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:paddingLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/btnSave"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tvSiteFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        android:id="@+id/btnCancel"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_toRightOf="@+id/btnSave"
        android:layout_toEndOf="@+id/btnSave" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:entries="@array/image_size"
        android:spinnerMode="dropdown" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:entries="@array/color_filter"
        android:spinnerMode="dropdown"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_toRightOf="@+id/tvImageType"
        android:layout_alignParentRight="true"
        android:entries="@array/image_type"
        android:spinnerMode="dropdown"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize" />


</RelativeLayout>
